--- a/anno/build.gradle
+++ b/anno/build.gradle
@@ -3,8 +3,10 @@ plugins {
 }
 dependencies {
     implementation 'com.squareup:javapoet:1.13.0'
+    implementation 'androidx.collection:collection:1.2.0'
     compileOnly files('libs/rt.jar')
-    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc6'
+    //指定注解处理器
+    implementation 'com.google.auto.service:auto-service:1.0-rc6'
     annotationProcessor 'com.google.auto.service:auto-service:1.0-rc6'
 }
 java {
