--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,8 @@ android {
 
 dependencies {
     implementation project(path: ':anno')
-    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc6'
+    //指定注解处理器
+    annotationProcessor project(':anno')
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
